--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
     margin: 0;
-    height: 100vh;
+    min-height: 100vh;
     font-family: 'Outfit';
     color: white;
     overflow-x: hidden;
