--- a/style.css
+++ b/style.css
@@ -62,14 +62,14 @@ body::after {
 }
 
 .caption {
-    padding-top: 10px;
+    padding-top: 0.75rem;
     font-size: 1.25rem;
     min-width: 30rem;
     width: 40%;
 }
 
 .caption p {
-    padding-top: 15px;
+    padding-top: 1rem;
 }
 
 .caption h1 {
@@ -86,7 +86,7 @@ p {
 
 .left {
     text-align: left;
-    padding-left: 25px;
+    padding-left: 1.5rem;
     margin-right: auto;
     opacity: 0;
     transform: translateX(-100px);
@@ -104,7 +104,7 @@ p {
 
 .right {
     text-align: right;
-    padding-right: 25px;
+    padding-right: 1.5rem;
     margin-left: auto;
     opacity: 0;
     transform: translateX(100px);
@@ -142,12 +142,12 @@ p {
 }
 
 .socials {
-    padding-top: 10px;
+    padding-top: 1rem;
     display: block;
 }
 
 .extrapadding {
-    padding-top: 50px;
+    padding-top: 4rem;
 }
 
 .visible {
