--- a/style.css
+++ b/style.css
@@ -111,12 +111,16 @@ p {
     transition: transform 1.5s cubic-bezier(0.165, 0.84, 0.44, 1), opacity 1s linear;
 }
 
-.socials a {
+a {
+    background-color: transparent;
+    color: #6af;
     text-decoration: none;
+    transition: color 0.1s ease;
+}
+
+.socials a {
     padding-right: 0.75rem;
     padding-left: 0.75rem;
-    color: #6af;
-    transition: color 0.1s ease;
 }
 
 .username {
@@ -137,7 +141,7 @@ p {
     transition: opacity 0.1s ease;
 }
 
-.socials a:hover {
+a:hover {
     color: #eee;
 }
 
