--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
 body {
     margin: 0;
-    min-height: 100vh;
     font-family: 'Outfit';
     color: white;
     overflow-x: hidden;
@@ -42,9 +41,10 @@ body::after {
 #main {
     margin: auto;
     height: 100%;
-    max-width: 75rem;
+    max-width: 70rem;
     background: #0008;
     overflow: hidden;
+    min-height: 100vh;
 }
 
 #name {
@@ -65,7 +65,7 @@ body::after {
     padding-top: 0.75rem;
     font-size: 1.25rem;
     min-width: 30rem;
-    width: 40%;
+    width: 40vw;
 }
 
 .caption p {
